rs/demos/proc_macros/darling_example/tests/ui-fail/min_gt_max.stderr
error: `min` must be <= `max`
 --> tests/ui-fail/min_gt_max.rs:6:5
  |
6 |     level: i32,
  |     ^^^^^
